Usage of CommandRunner and update the location of the pr-cloner.properties.